...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/our_mission_item_image_view"
            tools:text="“В хосписе не работают плохие люди” В.В. Миллионщикова" />

        <TextView
            android:id="@+id/our_mission_item_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="4dp"
            android:paddingEnd="8dp"
            android:visibility="gone"
...
