...
        android:id="@+id/custom_app_bar_title_text_view"
        style="@style/TopAppBarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_tool_bar_title"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/our_mission_image_button"
        app:layout_constraintStart_toEndOf="@id/main_menu_image_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/custom_app_bar_sub_title_text_view"
        style="@style/TopAppBarSubTitle"
...
